--- a/avv.html
+++ b/avv.html
@@ -1366,6 +1366,7 @@ await sleep(500);
   async function runAnalysis() {
     if (detectBtn.disabled) return;
     detectBtn.disabled = true;
+	resultContainer.innerHTML = "";   
     loader.style.display = "block";
     await runAnalysisCore();
     loader.style.display = "none";
