Update and rename 520.html to 36.html

--- a/36.html
+++ b/36.html
@@ -699,6 +699,7 @@ await sleep(500);
   async function runAnalysis() {
     if (detectBtn.disabled) return;
     detectBtn.disabled = true;
+	resultContainer.innerHTML = ""; // ✅ 清空旧结果  
     loader.style.display = "block";
     await runAnalysisCore();
     loader.style.display = "none";
