Update and rename sss.html to rn.html

--- a/rn.html
+++ b/rn.html
@@ -1366,18 +1366,18 @@ await sleep(500);
 async function runAnalysis() {
   if (detectBtn.disabled) return;
   detectBtn.disabled = true;
-  detectBtn.textContent = "检测中……"; // ✅ 设置按钮文字
+  detectBtn.textContent = "检测中……";
 
-  resultContainer.innerHTML = ""; // 清空旧结果
+  // ✅ 清除旧评分结果，但保留提示区域
+  const oldContainer = resultContainer.querySelector("div");
+  if (oldContainer) oldContainer.remove();
+
   loader.style.display = "block";
-
   await runAnalysisCore();
-
   loader.style.display = "none";
   detectBtn.disabled = false;
-  detectBtn.textContent = "开始检测"; // ✅ 恢复按钮文字
+  detectBtn.textContent = "开始检测";
 }
-
 
   detectBtn.addEventListener("click", runAnalysis);
 });
