--- a/test9.html
+++ b/test9.html
@@ -656,14 +656,15 @@ if (countryCode !== "CN") {
 
 
     const webrtcResult = compareAllIPs();
-    const spoofResult = calculateSpoofScore(
-      ipapi,
-      delayDiff,
-      osMismatch,
-      geoNote,
-      cdnNoteRaw?.includes("❌"),
-      webrtcResult.status.includes("🔴")
-    );
+const spoofResult = calculateSpoofScore(
+  ipapi,
+  delayDiff,
+  osMismatch,
+  geoNote === "异常 ❌",
+  cdnNoteRaw?.includes("🔴"),
+  webrtcResult.status.includes("🔴")
+);
+
 
     const items = [
       ["是否标记为 TOR", ipapi?.is_tor ? "🔴 已标记" : "🟢 未标记", ipapi?.is_tor ? "#fb0000" : "#00ff22"],
