Update and rename test12.html to test13.html

--- a/test13.html
+++ b/test13.html
@@ -665,6 +665,7 @@ console.log("评分详情：", {
   webrtcMismatch: webrtcResult.status.includes("🔴")
 });
 
+console.log("最终评分：", spoofResult.score);
 
 	  
 
